# rylan-labs-common

./: .ansible-lint  .canon-metadata.yml  .coverage  .gitignore  .gitleaks.toml  .gitleaksignore  .markdownlint.json  .pre-commit-config.yaml  .shellcheckrc  .sops.yaml  .yamllint  CHANGELOG.md  Makefile  README.md  ansible.cfg  canon-manifest.yaml  common.mk  galaxy.yml  pyproject.toml  test.mk
.audit/: LEO_COUNCIL_ASSESSMENT_20251230.md  PHASE_6-10_EXECUTION_GUIDE.md  PHASE_6_QUICK_REFERENCE.md  REMEDIATION_LOG_20251230.md  initialization-log.md  install-to-repo-2026-01-06T10:41:02-06:00.json  install-to-repo-2026-01-06T10:41:22-06:00.json  symlink-validation-2026-01-06T10:48:08-06:00.json  v1.0.1-playbook-delivery.json
.canon/: CANON_INTEGRATION.md  PHASED_TODO_LIST.md  SYMLINK_ROADMAP.md  TIER0_SYMLINK_ANALYSIS.md
.rylan/: common.mk  ml5-thresholds.yml
docs/: CANON-INTEGRATION.md  EMERGENCY_RESPONSE.md  GITOPS-SUBSTRATE-PARADIGM.md  INTEGRATION_GUIDE.md  MIGRATION_v1_to_v2.md  SEVEN_PILLARS.md  TANDEM_WORKFLOW.md  ansible-vault-discipline.md  ansible.cfg.template  api-coverage-discipline.md  canon-integration.md  emergency-response.md  extraction-roadmap.md  gitops-substrate-paradigm.md  integration-guide.md  network-versioning-discipline.md  rotation-discipline.md  security-posture-discipline.md  seven-pillars.md  tandem-workflow.md  trinity-execution.md
group_vars/: network_scheme.yml
inventory/: unifi_dynamic_inventory.py
meta/: runtime.yml
playbooks/: README.md  example-bootstrap.yml  example-firewall-rules.yml  example-harden.yml  example-identity.yml  (+5 more)
(+134 files in other folders)
