[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rylanlabs-common"
version = "1.0.0"
description = "Reusable Ansible collection for RylanLabs infrastructure automation"
requires-python = ">=3.10"

[tool.ruff]
line-length = 140
target-version = "py310"
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "Q", "RSE", "RET", "SIM", "TD", "TRY"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
exclude = [".venv", "build", "dist"]
